Fixed text spacing on buttons Added svg for hamburger menu for mobile concerns

--- a/styles/style.css
+++ b/styles/style.css
@@ -323,8 +323,6 @@ More
 	display: flex;
 	flex-wrap: wrap;
 	column-gap: 8%;
-	/*justify-content: center;
-align-items: center;*/
 }
 
 #more .design-work img,
@@ -432,13 +430,11 @@ input {
 }
 
 .form .submitBtn {
-	align-items: center;
-	padding: 1rem;
 	justify-content: center;
 	font-size: 1rem;
 	font-family: "Kanit", Tahoma, sans-serif;
 	font-weight: 500;
-	width: 75%;
+	width: 90%;
 	margin-left: 1rem;
 }
 
@@ -447,13 +443,6 @@ input {
 	color: #dfdee0;
 }
 
-/*
-.form-section img {
-	width: 15%;
-	height: 15%;
-	margin-right: 10%;
-}
-*/
 .form-group {
 	display: flex;
 }
@@ -541,14 +530,12 @@ input {
 }
 
 .contact-page-form .submitBtn {
-	align-items: center;
-	padding: 1rem;
-	justify-content: center;
+	padding-bottom: 1rem;
 	font-size: 1rem;
 	font-family: "Kanit", Tahoma, sans-serif;
 	font-weight: 500;
 	width: 100%;
-	margin: 0 auto;
+	margin-top: 1.5rem;
 	border: 3px solid;
 }
 
@@ -618,11 +605,11 @@ Additional Styles
 	display: none;
 }
 
-.bar {
+.hamburger img {
 	display: block;
-	width: 25px;
-	height: 3px;
-	margin: 5px auto;
+	width:2rem;
+	height: auto;
+	margin: .05rem auto;
 	-webkit-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 	background-color: #101010;
@@ -690,11 +677,7 @@ Additional Styles
 		margin-left: 20px;
 		padding-top: 4%;
 	}
-/*
-	.logo {
-		display: none;
-	}
-*/
+
 	.contact-page-form {
 		float: right;
 		margin-left: 5%;
@@ -736,11 +719,6 @@ Additional Styles
 		font-size: 1.5rem;
 		margin-bottom: .5rem;
 	}
-/*
-	.footer-links {
-		display: none;
-	}
-*/
 
 	.footer-content span {
 		margin-left: 5%;
